fix of Bugfind warnings